# Blog

./: .gitignore  README.md
backend/: DOC.md  package.json  server.js  server.ts
backend/backup/: README.md  backup.sh  verify.sh
backend/handlers/: auth.js  auth.ts  images.js  images.ts  logs.js  logs.ts  posts.js  posts.ts
backend/middleware/: auth.js  auth.ts  errorHandler.js  rateLimiter.js  validate.js  validate.ts
backend/models/: db.js  db.ts  schema.js
backend/routes/: auth.js  auth.ts  images.js  images.ts  logs.js  logs.ts  posts.js  posts.ts
backend/tests/utils/: getUsernameFromToken.js  loggers.js  tokenWhitelist.js  validators.js
backend/utils/: getUsernameFromToken.js  imageProcessor.js  logger.js  logger.ts  tokenWhitelist.js  tokenWhitelist.ts  validators.js  validators.ts
csrf/: Cargo.toml
csrf/src/: main.rs  token.rs
frontend/: config.json  config.node.json  eslint.config.js  index.html  package.json
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
frontend/src/components/: CreatePost.tsx  Home.tsx  Layout.jsx  Layout.tsx  Login.tsx  Logout.jsx  Logout.tsx  Navbar.jsx  Navbar.tsx  PostDetail.tsx  PostList.tsx  ProtectedRoute.jsx  ProtectedRoute.tsx  Register.tsx  TokenRefresh.jsx
services/User/: Program.cs
services/UserManagement/: Program.cs  UserManagement.csproj  UserManagement.http
services/UserService/: User.cs  UserService.csproj  UserService.http
services/user_management/: Cargo.toml
user-management/: Cargo.toml
user-management/src/: auth.rs  csrf.rs  db.rs  handlers.rs  main.rs  models.rs
(+54 files in other folders)
